<resources>
    <string name="appName">My Footprints</string>

    <string name="locale">En</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="newFootprint">New footprint</string>
    <string name="myWorld">My world</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="addComment">Add comment</string>
    <string name="totalFootprints">Total footprints: {0}</string>
    <string name="selectPhoto">Select photo</string>
    <string name="retry">Retry</string>
    <string name="createFootprint">Create footprint</string>
    <string name="updateFootprint">Update footprint</string>
    <string name="setLocation">Set location</string>
    <string name="addPhoto">Add photo</string>
    <string name="mapIsUnavailable">The map is unavailable</string>
    <string name="currentLocationIs">Your last location is: {0} {1}</string>
    <string name="tryAgain">Try again</string>

    <string name="generalError">Unfortunately, an error was encountered during the operation.</string>
    <string name="saveFootprintError">Can\'t save footprint, an error occurred while saving.</string>

    <string name="externalStorageExplanation">We need permission to read files on your device. We use it to fill a photo list.</string>
    <string name="externalStorageDenied">You haven\'t granted permission - we can\'t move to selecting photo, sorry.</string>

    <string name="geolocationExplanation">To create a footprint, we need access to the device location.</string>
    <string name="geolocationDenied">You haven\'t granted permission - we can\'t move to footprint creation, sorry.</string>
    <string name="googleDriveExplanation">We are about to ask you to sign in to Google Drive to backup and restore your footprints. Please connect to the Internet.</string>
    <string name="googleDriveFail">An error occurred while signing in to Google Drive. Please check your Internet connection.</string>

    <string name="cameraDenied">You haven\'t granted permission - we can\'t open a camera application, sorry.</string>
    <string name="noCamera">A camera application is not found</string>
    <string name="noGallery">A gallery application is not found</string>

    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="temperature">Temperature</string>

    <string name="enableLocationQuestion">You should enable the Location Services to refine your location</string>
    <string name="goToSettings">Go to Settings</string>
    <string name="notNow">Not now</string>

    <string name="pinBackground">Pin background</string>
    <string name="pinText">Pin text</string>
    <string name="pinColorSelect">Select pin color</string>

    <string name="timesSquare">Times Square, NYC</string>
    <string name="mapPinHelp">Use a long tap on the map to set pin location manually</string>
    <string name="footprintInterruptionQuery">Do you want to interrupt the operation?</string>
    <string name="interrupt">Interrupt</string>

    <string name="deleteFootprintQuestion">Are you sure you want to delete the footprint?</string>
    <string name="delete">Delete</string>
    <string name="sendTo">Send to</string>
    <string name="loadViaWiFi">Load geographic data via WiFi only</string>
    <string name="loadIsTaken">Load geographic data when a footprint is taken</string>
    <string name="backupViaWiFi">Backup footprints via WiFi only</string>
    <string name="appVersion">App version</string>
    <string name="haveQuestions">Have questions?</string>
    <string name="contactEmail">al.e.shevelev@gmail.com</string>

    <string name="firstLoadingListLoading">The footprints list is being loaded…</string>
    <string name="firstLoadingListLoaded">The footprints list is being loaded… done!</string>
    <string name="firstLoadingListSuccess">All footprints have been loaded</string>
    <string name="firstLoadingListFail">An error was encountered during footprints loading</string>
    <string name="firstLoadingListProgress">Processed {0} of {1}</string>
    <string name="firstLoading">Footprints loading</string>
    <string name="firstLoadingStartMessage">We are about to load all of your footprints. Do not turn off your Internet connection, please.</string>
    <string name="firstLoadingNoConnectionMessage">We are about to load all of your footprints. Turn on your Internet connection, please.</string>
    <string name="firstLoadingLTEMessage">We are about to load all of your footprints. To avoid extra payments, we recommend using a WiFi connection.</string>

    <string name="imageFormatUnsupported">This image format is not supported</string>
</resources>